# ap_stats_final_project

./: .gitignore  index.html  main.py  main_notebook.py  pre.html  pyproject.toml
data/: 2020.xlsx  school_rank.txt  ~$2020.xlsx
output/: applicant_counts_fixed_intervals_exp_fit.html  applicant_counts_fixed_intervals_linear_fit.html  chi2_pvalues.html  correlation_by_group.html  grouped_admit_rate_1-9.html  grouped_admit_rate_10-30.html  grouped_admit_rate_31-73.html  grouped_admit_rate_74-200.html  grouped_admit_rate_combined.html  grouped_admit_rate_subplot.html  lg_grouped_admit_rate.html  scaled_applicant_bar.html
pre/: _quarto.yml  _variables.yml  index.qmd  pre.qmd
report/: ref.bib  report.typ
src/: analysis.py  col_options.py  main_notebook.py  organization.py  unique_options.txt  visualization.py
