[project]
name = "ap-stats-final-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.14.0",
    "icecream>=2.1.4",
    "ipykernel>=6.29.5",
    "marimo[recommended]>=0.13.10",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "polars>=1.29.0",
    "python-lsp-server[all]>=1.12.2",
    "scipy>=1.15.3",
    "xlsx2csv>=0.8.4",
    "xlsxwriter>=3.2.3",
]



[tool.marimo.experimental]
lsp = true
